--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <meta name="SpaceGameDev's Website"/>
     <meta content="space,spacegamedev,gamedev,spacegamedev568" name="keywords"/>
     <link href="/manifest.json" rel="manifest">
-    <link href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp" rel="shortcut icon"
+    <link href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
     <link href="css\main.css" rel="stylesheet">
-    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
+    <link href="https://spacegamedev-assets.pages.dev/css/fonts.css" rel="preload" as="style">
     <link href="css\home.css" rel="stylesheet">
-    <link href="https://assets.spacegamedev.com" rel="preconnect"/>
-    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
+    <link href="https://spacegamedev-assets.pages.dev" rel="preconnect"/>
+    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2"
+    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2"
+    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans-Italic.woff2"
           rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2"
+    <link as="font" crossorigin="anonymous" href="https://spacegamedev-assets.pages.dev/css/fonts/Comfortaa.woff2"
           rel="preload">
 </head>
 <!-- End Head, Start Body -->
@@ -37,19 +37,19 @@
 <!-- Start Header Section -->
 <div class="header">
     <div class="header-bg"></div>
-    <!--<a><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
+    <!--<a><img src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
     <button class="openbtn" onclick="openNav()" title="Navigation"><img
             alt="Open Sidebar" class="openbtn-img"
-            src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg"></button>
+            src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg"></button>
     
-        <img alt="" class="header-logo" src="https:\\assets.spacegamedev.com/images/webp/avatar-outline.webp">
+        <img alt="" class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp">
 
-    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://assets.spacegamedev.com/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://assets.spacegamedev.com/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
+    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://spacegamedev-assets.pages.dev/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://spacegamedev-assets.pages.dev/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
     </button>
     <div class="sidebar" id="websidebar">
         <button class="closebtn" onclick="closeNav()"><img
                 alt="Close Navigation" aria-label="Close the navigation bar."
-                class="closenavbutton" src="https://assets.spacegamedev.com/images/ui/menu-x.svg"
+                class="closenavbutton" src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg"
                 title="Close Navigation"></button>
         <a class="sidebar-link" href="index.html">Home</a>
         <a class="sidebar-link" href="certifications.html">Certifications</a>
@@ -70,7 +70,7 @@
     
         <br><br><br><br><br><br>
         <img alt="SpaceGameDev's Avatar" class="sgd-logo"
-             src="https://assets.spacegamedev.com/images/webp/sgd-logo-256.webp">
+             src="https://spacegamedev-assets.pages.dev/images/webp/sgd-logo-256.webp">
         <br><br>
         <div class="intro">
             <p>
