Fonts stuff again

--- a/linkedin.html
+++ b/linkedin.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,6 +5,7 @@
     <title>Jesse's LinkedIn Profile</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images/webp/sgd-logo-round.webp"/>
     <link rel="stylesheet" href="https://spacegamedev.com/css/main.css">
+    <link href="css/fonts.css" rel="stylesheet">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
     </head>
     <body>
