--- a/projects.html
+++ b/projects.html
@@ -6,14 +6,11 @@
     <meta name="description" content="Jesse Hodgson's personal projects.">
     <title>SpaceGameDev's Website</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
-    <link rel="stylesheet" href="css\main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
-    <link rel="stylesheet" href="css\projects.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link href="css/fonts.css" rel="stylesheet">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2" as="font" crossorigin="anonymous">
   </head>
   <!-- End Head, Start Body -->
   <body>
