--- a/socials.html
+++ b/socials.html
@@ -8,21 +8,13 @@
     <meta content="Jesse Hodgson, aka SpaceGameDev568 - Software Developer and IT Support Specialist" name="description">
     <meta name="SpaceGameDev's Website"/>
     <meta content="space,spacegamedev,gamedev,spacegamedev568" name="keywords"/>
-    <link href="/manifest.json" rel="manifest">
     <link href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
-    <link href="css\main.css" rel="stylesheet">
-    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
-    <link href="css\socials.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="stylesheet">
+
+    <link href="css/socials.css" rel="stylesheet">
     <link href="https://assets.spacegamedev.com" rel="preconnect"/>
-    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
-          rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2"
-          rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2"
-          rel="preload">
-    <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2"
-          rel="preload">
 </head>
 <!-- End Head, Start Body -->
 <body>
