--- a/resume.html
+++ b/resume.html
@@ -8,12 +8,12 @@
     <meta content="Jesse Hodgson, aka SpaceGameDev568 - Software Developer and Digital Artist" name="description">
     <meta name="SpaceGameDev's Website"/>
     <meta content="space,spacegamedev,gamedev,spacegamedev568" name="keywords"/>
-    <link href="/manifest.json" rel="manifest">
     <link href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
-    <link href="css\main.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
-    <link href="css\resume.css" rel="stylesheet">
+    <link href="css/resume.css" rel="stylesheet">
+    <link href="css/fonts.css" rel="stylesheet">
     <link href="https://assets.spacegamedev.com" rel="preconnect"/>
     <link as="font" crossorigin="anonymous" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2"
           rel="preload">
