--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,8 @@
     <title>SpaceGameDev's Website</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
+    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="stylesheet">
     <link rel="stylesheet" href="css/projects.css">
-    <link href="css/fonts.css" rel="stylesheet">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
   </head>
   <!-- End Head, Start Body -->
