--- a/certifications.html
+++ b/certifications.html
@@ -11,9 +11,8 @@
     <link href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
     <link href="css/main.css" rel="stylesheet">
-    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
+    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="stylesheet">
     <link href="css/certifications.css" rel="stylesheet">
-    <link href="css/fonts.css" rel="stylesheet">
     <link href="https://assets.spacegamedev.com" rel="preconnect"/>
 </head>
 <!-- End Head, Start Body -->
