--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/fonts.css" rel="stylesheet">
+    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="stylesheet">
     <link href="css/home.css" rel="stylesheet">
     <link href="https://spacegamedev-assets.pages.dev" rel="preconnect"/>
 </head>
