Revamped Downloads page

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="space,spacegamedev,gamedev,spacegamedev568" />
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="https://spacegamedev.com/css/main.css">
-    <link rel="stylesheet" href="https://spacegamedev.com/css/downloads.css">
+    <link rel="stylesheet" href="https://spacegamedev.com/css/Resources.css">
     <link rel="stylesheet" href="https://assets.spacegamedev.com/css/fonts.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
   </head>
