--- a/downloads.html
+++ b/downloads.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/ico"
           href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
-    <link rel="stylesheet" href="css\downloads.css">
+    <link rel="stylesheet" href="css\Resources.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
 </head>
 <!-- End Head, Start Body -->
@@ -23,7 +23,7 @@
 
 <!-- Start Header Section -->
 <div class="header">
-    <div class="header-bg"></div>
+    
     <button class="openbtn" onclick="openNav()" title="Navigation"><img
             src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="openbtn-img"
             alt="Open Sidebar"></button>
@@ -38,7 +38,7 @@
         <a href="index.html" class="sidebar-link">Home</a>
         <a class="sidebar-link" href="certifications.html">Certifications</a>
         <a href="projects.html" class="sidebar-link">Projects</a>
-        <a href="downloads.html" class="sidebar-link">Downloads</a>
+        <a href="resources.html" class="sidebar-link">Resources</a>
         <a href="support.html" class="sidebar-link">Support</a>
         <a class="sidebar-link" href="socials.html">Socials</a>
         <iframe class="betterstack-badge" src="https://status.spacegamedev.com/badge?theme=dark" id="betterstack-badge" width="250" height="30" frameborder="0" scrolling="no"></iframe>
@@ -47,13 +47,10 @@
 <!-- End Header Section-->
 <div id="page-wrapper">
     <div class="content-wrapper">
-<section class="downloads"><br><br><br><br><br><br>
-    <p class="generic-text-header">Download Center</p>
+<section class="Resources"><br><br><br><br><br><br>
+    <p class="generic-text-header">Resources</p>
     <br><br><br><br>
-
-    <a class="dl-link" href="https://github.com/SpaceGameDev568/Charles/releases/latest">Charles</a>
-    <br><br><br><br><br>
-    <a class="dl-link" href="https://github.com/SpaceGameDev568/GoCleanYourComputer/releases/latest">GoCleanYourComputer</a>
+    <p class="text">You can find most of my work on <a class="standard-link" href="https://github.com/SpaceGameDev568">GitHub</a>, however if you're looking for a particular piece of media I've created for use in my projects or throughout my websites, you can either find it on <a class="standard-link" href="https://assets.spacegamedev.com">assets.spacegamedev.com</a> or <a class="standard-link" href="https://lfs.spacegamedev.com">lfs.spacegamedev.com</a>. Please note that assets.spacegamedev.com is not indexed, so it might be difficult to find what you want. Instead, you may want to visit it's <a class="standard-link" href="https://github.com/SpaceGameDev568/assets.spacegamedev.com">GitHub repository</a> and find the file, then link to it or download it from the website.</p>
 </section><br><br>
 </div>
 </div>
