--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <!-- Start Header Section -->
 <div class="header">
-    <div class="header-bg"></div>
+    
     <!--<a><img src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
     <button class="openbtn" onclick="openNav()" title="Navigation"><img
             alt="Open Sidebar" class="openbtn-img"
@@ -44,9 +44,9 @@
         <a class="sidebar-link" href="index.html">Home</a>
         <a class="sidebar-link" href="certifications.html">Certifications</a>
         <a class="sidebar-link" href="projects.html">Projects</a>
-        <a class="sidebar-link" href="downloads.html">Downloads</a>
+        <a class="sidebar-link" href="resources.html">Resources</a>
         <a class="sidebar-link" href="support.html">Support</a>
-        <a class="sidebar-link" href="socials.html">Socials</a>
+        <a class="sidebar-link" hre f="socials.html">Socials</a>
 
         <iframe class="betterstack-badge" src="https://status.spacegamedev.com/badge?theme=dark" id="betterstack-badge" width="250" height="30" frameborder="0" scrolling="no"></iframe>
 
