--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 
     <!-- Start Header Section -->
     <div class="header">
-      <div class="header-bg"></div>
+      
       <!--<a><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
       <button class="openbtn" onclick="openNav()" title="Navigation"><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="openbtn-img" alt="Open Sidebar"></button>
       
@@ -35,7 +35,7 @@
         <a href="index.html" class="sidebar-link">Home</a>
         <a class="sidebar-link" href="certifications.html">Certifications</a>
         <a href="projects.html" class="sidebar-link">Projects</a>
-        <a href="downloads.html" class="sidebar-link">Downloads</a>
+        <a href="resources.html" class="sidebar-link">Resources</a>
         <a href="support.html" class="sidebar-link">Support</a>
         <a class="sidebar-link" href="socials.html">Socials</a>
         <iframe class="betterstack-badge" src="https://status.spacegamedev.com/badge?theme=dark" id="betterstack-badge" width="250" height="30" frameborder="0" scrolling="no"></iframe>
@@ -54,14 +54,14 @@
 <p class="project-name">Charles</p><br>
 <p class="project-desc">Charles is a command line app I'm working on to learn the fundamentals of Go (golang).<br> It's purpose is to automate various tasks with one simple command.</p>
 <br>
-<a href="https://github.com/SpaceGameDev568/Charles" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
+<a href="https://github.com/SpaceGameDev568/Charles" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
 </div><br><br><br>
 
 <div class="project-wrapper">
   <p class="project-name">Go Clean Your Computer</p><br>
   <p class="project-desc">GoCleanYourComputer is a GUI app I created in C# to access and execute Windows maintenance tasks easily.</p>
   <br>
-  <a href="https://github.com/SpaceGameDev568/GoCleanYourComputer" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
+  <a href="https://github.com/SpaceGameDev568/GoCleanYourComputer" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
 </div><br><br><br>
 <!--<p class="projects-subsection-h">Games</p>-->
 <p class="projects-subsection-h">Mods</p>
@@ -97,7 +97,7 @@
     <p class="project-name">Better Grass</p><br>
     <p class="project-desc">This is a mod for Satisfactory that lets you customize how the grass looks in-game</p>
     <br>
-    <a href="https://github.com/SpaceGameDev568/BetterGrass" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
+    <a href="https://github.com/SpaceGameDev568/BetterGrass" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
 </div><br><br><br>
 </section><br>
     </div>
