--- a/support.html
+++ b/support.html
@@ -28,7 +28,7 @@
 
     <!-- Start Header Section -->
     <div class="header">
-      <div class="header-bg"></div>
+      
       <!--<a><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
       <button class="openbtn" onclick="openNav()" title="Navigation"><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="openbtn-img" alt="Open Sidebar"></button>
       
@@ -42,7 +42,7 @@
         <a href="index.html" class="sidebar-link">Home</a>
         <a class="sidebar-link" href="certifications.html">Certifications</a>
         <a href="projects.html" class="sidebar-link">Projects</a>
-        <a href="downloads.html" class="sidebar-link">Downloads</a>
+        <a href="resources.html" class="sidebar-link">Resources</a>
         <a href="support.html" class="sidebar-link">Support</a>
         <a class="sidebar-link" href="socials.html">Socials</a>
         <iframe class="betterstack-badge" src="https://status.spacegamedev.com/badge?theme=dark" id="betterstack-badge" width="250" height="30" frameborder="0" scrolling="no"></iframe>
