Updated resources and projects

--- a/projects.html
+++ b/projects.html
@@ -95,9 +95,15 @@
 </div><br><br><br>
   <div class="project-wrapper">
     <p class="project-name">Better Grass</p><br>
-    <p class="project-desc">This is a mod for Satisfactory that lets you customize how the grass looks in-game</p>
+    <p class="project-desc">This is a mod for Satisfactory that lets you customize how the grass looks in-game.</p>
     <br>
     <a href="https://github.com/SpaceGameDev568/BetterGrass" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
+</div><br><br><br>
+  <div class="project-wrapper">
+    <p class="project-name">2m Walls</p><br>
+    <p class="project-desc">This is a mod for Satisfactory that gives you an extra wall size for quicker construction.</p>
+    <br>
+    <a href="https://github.com/SpaceGameDev568/TwoMeterWalls" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
 </div><br><br><br>
 </section><br>
     </div>
