--- a/404.html
+++ b/404.html
@@ -10,18 +10,57 @@
     <meta name="keywords" content="space,spacegamedev,gamedev,spacegamedev568" />
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="https://spacegamedev.com/css/main.css">
-    <link rel="stylesheet" href="https://spacegamedev.com/css/Resources.css">
+    <link rel="stylesheet" href="https://spacegamedev.com/css/404.css">
     <link rel="stylesheet" href="https://assets.spacegamedev.com/css/fonts.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
   </head>
   <!-- End Head, Start Body -->
   <body>
       <br><br><br><br>
-      <img style="display: block; margin-left: auto; margin-right: auto; width: 512px;" src="https:\\assets.spacegamedev.com\images\webp\monochrome-logo-large.webp">
+      <img alt="SpaceGameDev" style="display: block; margin-left: auto; margin-right: auto; width: 512px;" src="https:\\assets.spacegamedev.com\images\webp\monochrome-logo-large.webp">
       <br><br><br>
         <p style="display: block; margin-left: auto; margin-right: auto; text-align: center;" class="text">
             Sorry, we couldn't find that page in this directory.<br><br> Would you like to go to the home page?<br><br><br>
 
             <a class="dl-link" href="index.html">Home</a>
         </p><!-- style="color:#2871c5; background-color: var(--dark-foreground); padding: 6px 12px; border-radius: 5px; text-decoration: none; font-size: 26px;" -->
+    <style>
+        /* Copyright (©) 2022 - 2024  Jesse Hodgson. All Rights Reserved */
+
+        .dl-link {
+            /*color: #2871c5;
+            background: var(--dark-foreground);
+            padding: 6px 12px; border-radius: 5px;
+            text-decoration: none;
+            font-size: 26px;
+            text-align: center;*/
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            background: var(--sgd-blue);
+            color: var(--dark-text);
+            padding: 9px 36px 9px 36px;
+            text-decoration: none;
+            text-align: center;
+            font-family: Open Sans, sans-serif;
+            font-size: 25px;
+            border-radius: 5px;
+            width: fit-content;
+            transition: background 0.3s;
+        }
+
+        .dl-link:hover {
+            background: #185485;
+        }
+
+        body.light .dl-link{
+            color: var(--light-foreground);
+            background: var(--light-sgd-blue);
+        }
+
+        body.light .dl-link:hover {
+            background: #015eaf;
+        }
+    </style>
+  </body>
 </html>
