--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
         <p style="display: block; margin-left: auto; margin-right: auto; text-align: center;" class="text">
             Sorry, we couldn't find that page in this directory.<br><br> Would you like to go to the home page?<br><br><br>
 
-            <a class="dl-link" href="index.html">Home</a>
+            <a class="dl-link" href="/index.html">Home</a>
         </p><!-- style="color:#2871c5; background-color: var(--dark-foreground); padding: 6px 12px; border-radius: 5px; text-decoration: none; font-size: 26px;" -->
     <style>
         /* Copyright (©) 2022 - 2024  Jesse Hodgson. All Rights Reserved */
