Corrections to some outdated statements

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             begin following the courses on their website to learn game development. I gained a lot of knowledge about
             the game design process and the basics of programming from the time I spent in Unity. After that, I took
             what I had learned and decided to try to make some mods for a game I play, called <u><a
-                class="standard-link" href="https://satisfactorygame.com">Satisfactory</a></u>. This led me to create 4
+                class="standard-link" href="https://satisfactorygame.com">Satisfactory</a></u>. This led me to create 6
             mods, which I published on <u><a class="standard-link" href="https://ficsit.app/user/5GqLMHyzA3myPG">ficsit.app</a></u>
             and <u><a class="standard-link" href="https://github.com/SpaceGameDev568?tab=repositories">GitHub</a></u>.
             If you would like, you can read more about them on the <u><a class="standard-link" href="projects.html">projects
@@ -104,14 +104,14 @@
             off my skills and to attain some knowledge of HTML, CSS, and Javascript. I also gained some familiarity with
             <u><a class="standard-link" href="https://git-scm.com">Git</a></u> and <u><a class="standard-link"
                                                                                          href="https://perforce.com">Perforce</a></u>
-            for version control of these projects. Most recently, I have been learning programming with the <u><a
+            for version control of these projects. In 2023, I was beginning learn programming with the <u><a
                     class="standard-link" href="https://go.dev">Go language</a></u> to create a <u><a
                     class="standard-link" href="https://github.com/SpaceGameDev568/Charles">command line application</a></u>
-            to automate some basic computing tasks and to make it easier for me to debug issues with other apps.</p>
+            to automate some basic computing tasks and to make it easier for me to debug issues with other apps. This app was ultimately never completed as I lost interest in the project.</p>
         <br><br>
 
         <p class="about-me-bio">More recently I've taken interest in the IT industry and I'm looking to get a career in tech when I graduate high school.
-            I've been teaching myself network administration and automation in my free time. In October 2024 I completed the Google IT Support
+            I've been teaching myself network administration and automation in my free time. In October 2023 I completed the Google IT Support
             Specialist Certificate course in order to prepare myself for an entry-level job in the industry. You can see all the certificates I've earned on the <u><a class="standard-link" href="certifications.html">Certifications</a></u> page or on my <u><a class="standard-link" href="linkedin.html">LinkedIn</a></u> profile.</p>
     
 </section>
