--- a/resources.html
+++ b/resources.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/ico"
           href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
+    <link rel="stylesheet" href="css\resources.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
 </head>
 <!-- End Head, Start Body -->
@@ -18,38 +19,33 @@
 <!-- Sidebar function -->
 <script src="js/sidebar.js" defer></script>
 <!-- Theme switcher button function with cookie -->
-<script src="js/toggletheme.js" defer></script>
 
-<!-- Start Header Section -->
-<div class="header">
-    
-    <button class="openbtn" onclick="openNav()" title="Navigation"><img
-            src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="openbtn-img"
-            alt="Open Sidebar"></button>
-    
-        <img class="header-logo" src="https:\\assets.spacegamedev.com/images/webp/avatar-outline.webp" alt="">
+<script defer src="js/CommonElements.js"></script>
 
-    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://assets.spacegamedev.com/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://assets.spacegamedev.com/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
-    <div id="websidebar" class="sidebar">
-        <button class="closebtn" onclick="closeNav()"><img
-                src="https://assets.spacegamedev.com/images/ui/menu-x.svg" class="closenavbutton"
-                title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
-        <a href="index.html" class="sidebar-link">Home</a>
-        <a class="sidebar-link" href="certifications.html">Certifications</a>
-        <a href="projects.html" class="sidebar-link">Projects</a>
-        <a href="resources.html" class="sidebar-link">Resources</a>
-        <a href="support.html" class="sidebar-link">Support</a>
-        <a class="sidebar-link" href="socials.html">Socials</a>
-        <iframe class="betterstack-badge" src="https://status.spacegamedev.com/badge?theme=dark" id="betterstack-badge" width="250" height="30" frameborder="0" scrolling="no"></iframe>
-    </div>
-</div>
-<!-- End Header Section-->
+<script src="js/jquery.js"></script>
+
+<div data-include="header"></div>
 <div id="page-wrapper">
     <div class="content-wrapper">
 <section class="Resources"><br><br><br><br><br><br>
-    <p class="generic-text-header">Resources</p>
+    <p class="generic-text-header">Brand Resources</p>
     <br><br><br><br>
-    <p class="text">You can find most of my work on <a class="standard-link" href="https://github.com/SpaceGameDev568">GitHub</a>, however if you're looking for a particular piece of media I've created for use in my projects or throughout my websites, you can either find it on <a class="standard-link" href="https://assets.spacegamedev.com">assets.spacegamedev.com</a> or <a class="standard-link" href="https://lfs.spacegamedev.com">lfs.spacegamedev.com</a>. Please note that assets.spacegamedev.com is not indexed, so it might be difficult to find what you want. Instead, you may want to visit it's <a class="standard-link" href="https://github.com/SpaceGameDev568/assets.spacegamedev.com">GitHub repository</a> and find the file, then link to it or download it from the website.</p>
+    <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/sgd-logo.webp">
+    <p class="text">SpaceGameDev's Avatar</p>
+    <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/sgd-logo-revisor.webp">
+    <p class="text">SpaceGameDev's Avatar - Revised</p>
+    <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/sgd-logo-rounded.webp">
+    <p class="text">SpaceGameDev's Avatar - Rounded Border</p>
+    <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/sgd-logo-rounded.webp">
+    <p class="text">SpaceGameDev's Avatar - Round</p>
+    <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/sgd-logo-patriotic.webp">
+    <p class="text">SpaceGameDev's Avatar - Patriotic</p>
+    <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/avatar-outline.webp">
+    <p class="text">SpaceGameDev's Avatar - Outline</p>
+    <img class="" src="https://assets.spacegamedev.com/images/webp/ssd-logo.webp">
+    <p class="text">SpaceGameDev Software Developments Logo</p>
+    <img class="" src="https://assets.spacegamedev.com/images/webp/sgd-modding.webp">
+    <p class="text">SpaceGameDev Modding Logo</p>
 </section><br><br>
 </div>
 </div>
