--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
     <link href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/resume.css" rel="stylesheet">
+    <link href="css/pages/resume.css" rel="stylesheet">
     <link href="https://assets.spacegamedev.com" rel="preconnect"/>
 </head>
 <!-- End Head, Start Body -->
