Import common elements automatically

--- a/resources.html
+++ b/resources.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/ico"
           href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
-    <link rel="stylesheet" href="css\resources.css">
+    <link rel="stylesheet" href="css\pages\resources.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
 </head>
 <!-- End Head, Start Body -->
@@ -31,21 +31,21 @@
     <p class="generic-text-header">Brand Resources</p>
     <br><br><br><br>
     <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/sgd-logo.webp">
-    <p class="text">SpaceGameDev's Avatar</p>
+    <p class="logo-text">SpaceGameDev's Avatar</p>
     <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/sgd-logo-revisor.webp">
-    <p class="text">SpaceGameDev's Avatar - Revised</p>
+    <p class="logo-text">SpaceGameDev's Avatar - Revised</p>
     <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/sgd-logo-rounded.webp">
-    <p class="text">SpaceGameDev's Avatar - Rounded Border</p>
+    <p class="logo-text">SpaceGameDev's Avatar - Rounded Border</p>
     <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/sgd-logo-rounded.webp">
-    <p class="text">SpaceGameDev's Avatar - Round</p>
+    <p class="logo-text">SpaceGameDev's Avatar - Round</p>
     <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/sgd-logo-patriotic.webp">
-    <p class="text">SpaceGameDev's Avatar - Patriotic</p>
+    <p class="logo-text">SpaceGameDev's Avatar - Patriotic</p>
     <img class="sgd-logo-stack-image" src="https://assets.spacegamedev.com/images/webp/avatar-outline.webp">
-    <p class="text">SpaceGameDev's Avatar - Outline</p>
-    <img class="" src="https://assets.spacegamedev.com/images/webp/ssd-logo.webp">
-    <p class="text">SpaceGameDev Software Developments Logo</p>
-    <img class="" src="https://assets.spacegamedev.com/images/webp/sgd-modding.webp">
-    <p class="text">SpaceGameDev Modding Logo</p>
+    <p class="logo-text">SpaceGameDev's Avatar - Outline</p>
+    <img class="sgd-large-logo" src="https://assets.spacegamedev.com/images/webp/ssd-logo.webp">
+    <p class="logo-text">SpaceGameDev Software Developments Logo</p>
+    <img class="sgd-large-logo" src="https://assets.spacegamedev.com/images/webp/sgd-modding.webp">
+    <p class="logo-text">SpaceGameDev Modding Logo</p>
 </section><br><br>
 </div>
 </div>
